# architecture-rust-webgpu

./: CLAUDE.md  Cargo.toml  README.md
assets/shaders/: basic.wgsl  textured.wgsl
examples/: 0_test_room.json  10_full_house.json  1_single_wall.json  2_wall_with_window.json  3_simple_room.json  4_room_with_door_window.json  5_two_rooms.json  6_room_with_furniture.json  7_multi_level.json  8_building_with_columns.json  9_complex_floor_plan.json
src/: camera.rs  camera_controller.rs  lib.rs  main.rs
src/core/: mod.rs  state.rs  surface.rs
src/renderer/: buffer.rs  mod.rs  pipeline.rs
src/scene/: loader.rs  mod.rs  primitives.rs
src/shaders/: mod.rs
src/utils/: mod.rs
