[package]
name = "webgpu-rust-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.29", features = ["serde"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
